--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ All colors MUST be HSL.
     --popover: 235 28% 10%;
     --popover-foreground: 210 30% 96%;
 
-    --primary: 242 83% 62%;
+    --primary: 340, 90%, 57%;
     --primary-foreground: 235 30% 8%;
 
     --secondary: 235 18% 16%;
