--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,7 @@ All colors MUST be HSL.
     --primary: 340, 90%, 57%;
     --primary-foreground: 235 30% 8%;
 
-    --secondary: 235 18% 16%;
+    --secondary: 278 100% 61.5% / 0.83;
     --secondary-foreground: 210 30% 96%;
 
     --muted: 235 18% 16%;
